# haskell-lexer

./: .travis.yml  haskell-lexer.cabal
.github/workflows/: haskell-ci.yml
Language/Haskell/: Lexer.hs
Language/Haskell/Lexer/: Layout.hs  Lex.hs  Position.hs  Tokens.hs  Utils.hs
generator/: README  lexer-generator.cabal
generator/src/: CompileRegExp.hs  DFA.hs  DetMachineToHaskell.hs  LexerGen.hs  MUtils.hs  Main.hs  Minimalize.hs  PPrint.hs  RegExp.hs  RegExpOps.hs
generator/src/Spec/: HaskellChars.hs  HaskellLexicalSyntax.hs
