Cabal-version:  2.2
Name:           haskell-lexer
Version:        1.2.1
License:        MIT
License-file:   LICENSE
Author:         Thomas Hallgren
Maintainer:     diatchki@galois.com
Category:       Language
Synopsis:       A fully compliant Haskell 98 lexer
Description:    A fully compliant Haskell 98 lexer.
Build-type:     Simple

Homepage:            https://github.com/yav/haskell-lexer
Bug-reports:         https://github.com/yav/haskell-lexer/issues

tested-with:
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Library
  Build-Depends:  base < 5
  Exposed-modules:  Language.Haskell.Lexer
  Other-modules:    Language.Haskell.Lexer.Layout,
                    Language.Haskell.Lexer.Tokens,
                    Language.Haskell.Lexer.Lex,
                    Language.Haskell.Lexer.Utils,
                    Language.Haskell.Lexer.Position

  GHC-options:
    -Wall
    -fno-warn-unused-matches
    -fno-warn-name-shadowing

  if impl(GHC >= 8.0)
    GHC-options:
      -Wcompat
      -Wno-unused-top-binds

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/yav/haskell-lexer.git
